Week7: connect mongodb and create CRUD operations
